--- a/src/app/fan-screen/fan-screen.component.html
+++ b/src/app/fan-screen/fan-screen.component.html
@@ -8,9 +8,9 @@
 
         <div *ngIf="takingPic" class="timer">{{timer}}</div>
 
-        <!-- <div class="overlay" *ngIf="!this.mobile">
+        <div class="overlay" *ngIf="!this.mobile">
             MOBILE ONLY
-        </div> -->
+        </div>
 
         <button class="start-button" *ngIf="!started" (click)="start()">
             START
