--- a/src/app/remote-cam/remote-cam.component.html
+++ b/src/app/remote-cam/remote-cam.component.html
@@ -1,31 +1,43 @@
 <div class="main-wrapper">
+
+    <!-- Start Button -->
     <button class="start-button" *ngIf="!started" (click)="start()">
         START
     </button>
+
     <!-- Video For Camera Stream -->
-    <video class="cam" #videoElement autoplay muted playsinline></video>
+    <video class="cam" [ngClass]="{'user': facingMode == user }" #videoElement autoplay muted playsinline></video>
+
     <div class="message">
-        Mobile: {{this.mobile}}
-        <br>
+        <br><br><br>
+        Mobile: {{mobile}}<br>
+        Status: {{liveStreamStatus}}<br>
+        OnTheAir: {{onTheAir}}<br>
         {{msg}}
     </div>
 
-    <button mat-mini-fab class="live-steam-status" [ngStyle]="{'green': liveStreamStatus}">
+    <!-- Live Stream Status -->
+    <button mat-mini-fab class="live-stream-status" [ngClass]="{'green': liveStreamStatus}">
         <mat-icon>videocam</mat-icon>
     </button>
 
-    <button mat-mini-fab class="on-the-air-status" [ngStyle]="{'red': onTheAir}">
+    <!-- On-The-Air Status -->
+    <button mat-mini-fab class="on-the-air-status" [ngClass]="{'red': onTheAir}">
         <mat-icon>airplay</mat-icon>
     </button>
 
-    <button mat-mini-fab color="primary" class="flip-cam" (click)="flipCam($event)">
+    <!-- Flip Camera -->
+    <button mat-mini-fab color="primary" class="flip-cam" (click)="flipCam($event)" *ngIf="mobile">
         <mat-icon>flip_camera_ios</mat-icon>
     </button>
 
-    <button mat-mini-fab color="primary" class="flash" (click)="toggleFlash($event)">
+    <!-- Flash -->
+    <button mat-mini-fab color="primary" class="flash" (click)="toggleFlash($event)" *ngIf="mobile">
         <mat-icon *ngIf="torch">flash_off</mat-icon>
         <mat-icon *ngIf="!torch">flash_on</mat-icon>
     </button>
 
+    <!-- Face Flash -->
+    <div class="facing-torch" *ngIf="facingTorch && facingMode == 'user'"></div>
 
 </div>
