boom baby 6 mo of work in my spare time done

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,17 +1,39 @@
-<h1>About Visualz</h1>
-<p>
-    Visualz is an visual media organization. We do a lot of different things.
-</p>
-<ul>
-    <li>
-        <strong>
-            At our core we develop audio-reactive visual composition
-            software that makes this all possible. And we give it away for free.
-        </strong>
-    </li>
-    <li>Live visual graphics, creative, and projections for live events and concerts.</li>
-    <li>Artist creative services.</li>
-    <li>Vj/Dj producing, distribution, booking.</li>
-    <li>Parties. Parties. Parties.</li>
-    <li>We're in Chicago. But go all over.</li>
-</ul>
+<div class="content-wrapper dark">
+    <div class="content-inner-wrapper">
+        <div class="download-area">
+
+            <img src="../../assets/images/icon.ico" class="ico" />
+
+
+        </div>
+        <div class="release-notes">
+            <h1>VISUALZ is</h1>
+            <p>
+                Passionate about technology, visual arts, music &amp; artists. Our home base is Chicago.
+            </p>
+
+            <p>
+                VISUALZ founders combined these passions into a platform of tools for artists to create
+                realtime, audio reactive visuals using web technologies such as WebGL, Web Audio, WebRTC, and custom
+                shaders for live events, concert visuals, streams, interactive installations, &amp; experiences.
+            </p>
+
+            <p>
+                We build software real-time audio-reactive music visualization tool, . We also build live concert
+                visuals and interactive installations.
+            </p>
+
+            <p>
+                When not building the Visualz software and toolset
+                we're doing events, booking vjs/djs, producing music, and more.
+                Contact visualzapp.contact@gmail.com to collab or hire us.
+            </p>
+
+            <h2>Investors</h2>
+            <p>
+                VISUALZ is looking for backers. Please contact visualzapp.contact@gmail.com for more info.
+            </p>
+
+        </div>
+    </div>
+</div>
