--- a/src/app/visualz/visualz.component.scss
+++ b/src/app/visualz/visualz.component.scss
@@ -8,3 +8,11 @@
     }
 }
 
+.new {
+    li {
+        font-size: 12px;
+        //display: block;
+        margin-bottom: 10px;
+        //list-style-type: circle;
+    }
+}
