--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -1,11 +1,15 @@
 <div class="wrapper pink">
     <div class="main">
-        <h1>Realtime Audio Reactive Graphics</h1>
+        <h1>Realtime Audio Reactive Experiences</h1>
         <h2>
-            Free visual composition tools for live events &amp; streams. Hey DJs, VJs, Artists, and Venues.
+
+            Create realtime audio reactive
+            graphical visualizations and experiences quickly and easily.
+            Intended for Vjs, Djs, Artists, and Venues.
+            <!-- Free visual composition tools for live events &amp; streams. Hey DJs, VJs, Artists, and Venues. -->
         </h2>
         <a routerLink="/start" class="download">STREAM IN BROWSER</a>
-        <a routerLink="/download" class="download">DOWNLOAD v1.2.2</a>
+        <a routerLink="/download" class="download">DOWNLOAD v2.0.1</a>
     </div>
     <div class='macwrap'>
         <img src='../../assets/images/macbook.png' class='macbook' />
@@ -28,7 +32,7 @@
             <img src="../../assets/images/icon.ico" class="ico" />
 
             <div *ngIf="deviceInfo.os == 'Mac'" class="clearfix">
-                <a href="https://visualz-1.s3.us-east-2.amazonaws.com/Visualz-1.2.2.dmg" target="_blank"
+                <a href="https://visualz-1.s3.us-east-2.amazonaws.com/Visualz-2.0.1.dmg" target="_blank"
                     mat-raised-button (click)="downloadMac()" class="pink button">
                     Download Free
                 </a>
@@ -44,28 +48,31 @@
 
         </div>
         <div class="release-notes">
-            <h1>VISUALZ</h1>
-            <p>
-                Visualz brings real-time audio responsiveness and video composition into one place to create great
-                visuals that go to your music's beat. Whether
-                you are a dj newb or a pro create visuals easily.
-            </p>
+            <h1>VISUALZ for laptop</h1>
 
             <div class="big-only">
-                <h2>What's New in Version 1.2.2</h2>
-                <ul>
-                    <li>Released 9/27/2019 version 1.2.2 is the first time Visualz has been available for Mac OSx. Yay!
-                    </li>
-                    <li>Crowdscreen fan cam selfie feature is live.</li>
-                    <li>Crowdscreen Link changed to just Crowdscreen.</li>
+                <h2>What's New in Version 2.0.1</h2>
+                <ul class='new'>
+                    <li>Released April 2020.</li>
+                    <li>Added visual effects.</li>
+                    <li>Updated camera feature. Now with streaming mobile video support.</li>
+                    <li>With permission the audience can send selfies to the composition.</li>
                     <li>Updates to remote control.</li>
-                    <li>Gif optimizations.</li>
-                    <li>Beat detection threshold changes.</li>
-                </ul>
-
-                <h2>Bug Fixes</h2>
-                <ul>
-                    <li>SMS number correction.</li>
+                    <li>Gif &amp; image search.</li>
+                    <li>CC video library.</li>
+                    <li>3d audio reactive visualizations.</li>
+                    <li>Optimized beat detection.</li>
+                    <li>Multiple screens.</li>
+                    <li>Stream to browser.</li>
+                    <li>Hotkeys.</li>
+                    <li>Mobile device controller.</li>
+                    <li>With permission control your audiences phone screen and flashlight.</li>
+                    <li>Updated smartphone remote control.</li>
+                    <li>Improved UI/UX.</li>
+                    <li>Add music to tracks.</li>
+                    <li>Optionally store media in the cloud.</li>
+                    <li>Output resolution specification.</li>
+                    <li>With permission collect connected audience mobile phone numbers.</li>
                 </ul>
             </div>
         </div>
