content for release

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -31,7 +31,8 @@
 
             <h2>Investors</h2>
             <p>
-                VISUALZ is looking for backers. Please contact visualzapp.contact@gmail.com for more info.
+                VISUALZ is looking for Angel's. Opportunity will be gone quick. Please contact
+                visualzapp.contact@gmail.com for more info.
             </p>
 
         </div>
