--- a/src/app/download/download.component.html
+++ b/src/app/download/download.component.html
@@ -1,27 +1,160 @@
 <div class="content-wrapper normal">
-    <h1 class="center">Download VISUALZ v1.2.2 for<br>Mac or Windows</h1>
+    <h1 class="center">
+        Download VISUALZ v2.0.1<br>
+        Free for Personal Use
+    </h1>
+
     <div class="clearfix"></div>
 
     <div class="bordered">
+
+        <img class="mac" src="../../assets/images/macos.png" />
+
         <a href="https://visualz-1.s3.us-east-2.amazonaws.com/Visualz-1.2.2.dmg" target="_blank" mat-raised-button
             (click)="downloadMac()" class="pink button">
             Download For Mac
         </a>
-        <img class="mac" src="../../assets/images/macos.png" />
+
+        <p class="center">
+            By downloading you accept the License Agreement
+        </p>
+
+        <div>
+            <h3>MINIMUM REQUIREMENTS</h3>
+
+            <p>
+                macOS 10.11 or higher
+            </p>
+
+            <p>
+                <strong>GPUs</strong><br>
+                Nvidia GeForce 600 Series or better<br>
+                AMD Radeon or FirePro<br>
+                Intel HD4000 or better<br>
+                Mac Pro / iMac / Mac Mini mid-2012 or newer
+            </p>
+
+            <p>
+                MacBook Air mid-2012 or newer
+            </p>
+
+            <p>
+                MacBook Pro (Retina) late-2012 or newer
+            </p>
+        </div>
     </div>
 
-    <div class="bordered" disabled>
+    <div class="border"></div>
+
+    <div class="bordered">
+
+        <img class="windows" src="../../assets/images/windows.png" />
+
         <a disabled="disabled" mat-raised-button class="pink button">
             Currently Unavailable
         </a>
 
-        <img class="windows" src="../../assets/images/windows.png" />
-
-        <p>
+        <p class="center">
             <a href="https://www.google.com/search?q=install+non+store+apps+windows+10&rlz=1C1CHBF_enUS840US840&oq=non-store+apps+win&aqs=chrome.2.69i57j69i60j0l4.8285j0j9&sourceid=chrome&ie=UTF-8"
                 target="_blank">Allow Non-Store Apps to Install on Windows 10</a>
         </p>
+
+        <div>
+            <h3>MINIMUM REQUIREMENTS</h3>
+
+            <p>Windows 7 SP1 / Windows 8 / Windows 10</p>
+
+            <p>Video RAM 1GB +</p>
+
+            <p>
+                <strong>Nvidia GPUs</strong><br>
+                GeForce 600 Series or better<br>
+                Quadro K Series or better
+            </p>
+
+            <p>
+                <strong>AMD GPUs</strong><br>
+                AMD HD 7000 Series or better<br>
+                AMD W or V Series or better
+            </p>
+
+            <p>
+                <strong>Intel Integrated GPUs</strong><br>
+                Intel HD4000, HD5000 or better
+            </p>
+
+            <p>
+                SSD drive recommended for movie playback
+            </p>
+        </div>
+
     </div>
 
-    <br><br><br><br><br><br>
-</div>
+    <div class="content-wrapper dark">
+        <div class="price_card">
+            <div class="header">
+                <span class="name">NON-COMMERCIAL</span>
+                <span class="desc">For personal use or learning. Not for paying projects.</span>
+                <span class="price">FREE</span>
+            </div>
+            <ul class="features">
+                <li>All Basic Features.</li>
+                <li>Compose sets &amp; tracks of visual media.</li>
+                <li>Manual &amp; automated audio reactive scene transitioning.</li>
+                <li>Audio analysis and beat detection.</li>
+                <li>Visual effects.</li>
+                <li>Audio reactive visual effects.</li>
+                <li>Camera support.</li>
+                <li>Mobile video support.</li>
+                <li>Smartphone remote control.</li>
+                <li>Gif &amp; image search.</li>
+                <li>CC video library.</li>
+                <li>3d audio reactive visualizations.</li>
+                <li>Multiple screens.</li>
+                <li>OBS integration for Stream RTSP video to web.</li>
+                <!-- <li>Max output resolution 1280x1280.</li> -->
+                <!-- <li>Stream to browser.</li> -->
+                <!-- <li>Fan Selfies (FanCam).</li> -->
+                <!-- <li>Mobile device controller.</li> -->
+                <!-- <li>Store media in the cloud.</li> -->
+                <!-- <li>Output resolution specification.</li> -->
+                <!-- <li>Audience contact collection.</li> -->
+            </ul>
+        </div>
+
+        <div class="price_card">
+            <div class="header">
+                <span class="name">EDUCATIONAL</span>
+                <span class="desc">For schools, faculty and students. Not for paying projects.</span>
+                <span class="price">$20</span>
+            </div>
+            <ul class="features">
+
+            </ul>
+        </div>
+
+        <div class="price_card">
+            <div class="header">
+                <span class="name">COMMERCIAL</span>
+                <span class="desc">Fully featured and for use in paying projects.</span>
+                <span class="price">$30</span>
+            </div>
+            <ul class="features">
+
+            </ul>
+        </div>
+
+        <div class="price_card">
+            <div class="header">
+                <span class="name">PRO</span>
+                <span class="desc">All features and access to Pro Support.</span>
+                <span class="price">$200</span>
+            </div>
+            <ul class="features">
+
+            </ul>
+        </div>
+
+        <div class='clearfix'></div>
+
+    </div>
