--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -8,8 +8,8 @@
             Intended for Vjs, Djs, Artists, and Venues.
             <!-- Free visual composition tools for live events &amp; streams. Hey DJs, VJs, Artists, and Venues. -->
         </h2>
-        <a routerLink="/start" class="download">STREAM IN BROWSER</a>
-        <a routerLink="/download" class="download">DOWNLOAD v2.0.1</a>
+        <a routerLink="/download" class="download">NEW v2.0.1 GET IT NOW</a><Br>
+        <a routerLink="/start" class="download">NEW LIVE STREAM TOOL</a><br>
     </div>
     <div class='macwrap'>
         <img src='../../assets/images/macbook.png' class='macbook' />
