bugfixes and polish

--- a/src/app/remote-screen/remote-screen.component.html
+++ b/src/app/remote-screen/remote-screen.component.html
@@ -1,1 +1,1 @@
-<video id="externalVideo" class="external-video" autoplay muted></video>
+<video id="externalVideo" class="external-video" autoplay muted controls></video>
