checkout stripe, and more

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,7 +9,8 @@
         <div class="release-notes">
             <h1>VISUALZ is</h1>
             <p>
-                Passionate about technology, visual arts, music &amp; artists. Our home base is Chicago.
+                Passionate about technology, visual arts, music &amp; artists.
+                The Visualz home base is Chicago.
             </p>
 
             <p>
@@ -19,8 +20,8 @@
             </p>
 
             <p>
-                We build software real-time audio-reactive music visualization tool, . We also build live concert
-                visuals and interactive installations.
+                We build software, real-time audio-reactive music visualization tools, live concert
+                visuals, and interactive installations.
             </p>
 
             <p>
@@ -31,7 +32,7 @@
 
             <h2>Investors</h2>
             <p>
-                VISUALZ is looking for Angel's. Opportunity will be gone quick. Please contact
+                VISUALZ is looking for backing. Opportunies will be gone quickly. Please contact
                 visualzapp.contact@gmail.com for more info.
             </p>
 
