--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -48,7 +48,7 @@
 
         </div>
         <div class="release-notes">
-            <h1>VISUALZ for laptop</h1>
+            <h1>VISUALZ v2.0.1</h1>
 
             <div class="big-only">
                 <h2>What's New in Version 2.0.1</h2>
@@ -88,7 +88,7 @@
         <img src="../../assets/images/projection.jpg" />
         <div class="feature-text">
             <mat-icon aria-hidden="false" aria-label="FanCam" class="ico wide">cast_connected</mat-icon>
-            <h1>Graphics</h1>
+            <h1>Audio Graphical</h1>
             <h2>Visualizations to the beat of your music</h2>
             <div class="big-only">
                 <p>
@@ -119,7 +119,7 @@
                     The image is then sent directly to the projection or wall.
                 </p>
                 <p>
-                    Until now this has been complicated and very expensive. Visualz makes it turn-key for free ;)
+                    Normally a complicated and expensive process is as easy as clicking a button.
                 </p>
             </div>
         </div>
@@ -133,16 +133,15 @@
         <img src="../../assets/images/crowdscreen.jpg" />
         <div class="feature-text">
             <mat-icon aria-hidden="false" aria-label="CrowdScreen" class="ico">mobile_screen_share</mat-icon>
-            <h1>CrowdScreen</h1>
+            <h1>Mobile Controller</h1>
             <h2>Mobile device flashlight and screen control</h2>
             <div class="big-only">
                 <p>
-                    The CrowdScreen feature is cutting-edge technology for the lighting industry.
-                    Create amazing visual experiences by incorporating hundreds and thousands of devices.
+                    The mobile controller is cutting-edge event creating tech.
+                    Create amazing visual experiences by incorporating audience devices.
                 </p>
                 <p>
-                    As with the FanCam this is usually complicated and expensive, requiring hardware. Visualz makes it
-                    as easy as clicking a button. Still free.
+                    Again a complicated and expensive process is as easy as clicking a button.
                 </p>
             </div>
         </div>
@@ -171,28 +170,33 @@
             <li>
                 <mat-icon aria-hidden="false" aria-label="Gif Heaven">gif</mat-icon>
                 <h1>Gif Heaven</h1>
-                <strong>Giphy</strong> integration lets you have access to millions of Gifs for your set right now.
+                <strong>Gif</strong> and image search lets you have access to millions of visuals for your set right
+                now.
             </li>
             <li>
                 <mat-icon aria-hidden="false" aria-label="Mic">mic</mat-icon>
                 <h1>Easy Input</h1>
-                Use your built-in microphone or mic input.
+                Use your computer's built-in microphone, external microphone, or line-in.
             </li>
             <li>
                 <mat-icon aria-hidden="false" aria-label="Output">all_out</mat-icon>
                 <h1>Easy Output</h1>
                 Output to projector, tvs, LED screens, lighting hardware, mobile devices, and more.
             </li>
-            <!-- 
             <li>
-                <mat-icon aria-hidden="false" aria-label="RemoteCam">linked_camera</mat-icon>
-                <h1>RemoteCam</h1>
+                <mat-icon aria-hidden="false" aria-label="Mobile Video">important_devices</mat-icon>
+                <h1>Mobile Video</h1>
                 Use mobile devices as remote cameras to achieve multiple video streams and angles.
-            </li> -->
+            </li>
             <li>
-                <mat-icon aria-hidden="false" aria-label="FanCam">settings_remote</mat-icon>
+                <mat-icon aria-hidden="false" aria-label="Remote Control">settings_remote</mat-icon>
                 <h1>Remote Control</h1>
                 Que tracks from your mobile device with the remote control. Its super jiffy.
+            </li>
+            <li>
+                <mat-icon aria-hidden="false" aria-label="Remote Screen">open_in_browser</mat-icon>
+                <h1>Remote Screen</h1>
+                Stream to the browser and display on remote screens.
             </li>
             <!--
             <li>
