--- a/src/app/success/success.component.html
+++ b/src/app/success/success.component.html
@@ -1,13 +1,13 @@
-<div class="content-wrapper">
+<div class="content-wrapper normal">
     <h1 class="center">SUCCESS</h1>
     <h2>Thank You</h2>
-    <p>Now that you have purchased VISUALZ, you can enter your email you used during checkout in the VISUALZ app to
-        unlock the watermark and your features.</p>
+    <p>
+        Enter your email into visualz to authenticate your license and unlock your features.
+    </p>
 
     <button routerLink="/download" class="pink" mat-raised-button>
         DOWNLOAD VISUALZ
     </button>
 
-    <img src='../../assets/images/macbook_PNG72.gif' class='macbook' />
     <div class="clearfix"></div>
 </div>
